--- a/Week 6/layout1.html
+++ b/Week 6/layout1.html
@@ -5,30 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layout</title>
-    <link rel="stylesheet" href="CSS/workshop 5.css">
+    <link rel="stylesheet" href="CSS/layout1.css">
 </head>
 <body>
 <main>
     <div class="splitBlock">
       <div class="left-col">
         <h1>
-          Selling online is vital to business growth.
+          Learn Languages in 30 Days
         </h1>
   
         <h2>
-          2025 Grow Your e-Commerce Conference </h2>
+          Be fluent in any language you like </h2>
   
         <div class="date">
-          September 16-18, 2025
+          January 20, 2023
         </div>
   
         <div class="venue">
-          Paragon One Plaza and Sky Garden
+          W World 
         </div>
   
         <div class="button">
           <a href="#">
-            BOOK NOW FOR EARLY BIRD PRICES
+            APPLY FOR IT NOW
           </a>
         </div>
         <!-- @end .button -->
@@ -36,7 +36,7 @@
       </div>
       <!-- @end content-wrapper -->
       <div class="right-col">
-        <figure style="background-image: url('pic.jpg');">
+        <figure style="background-image: url('learn.jpg');">
         </figure>
       </div>
       <div>
