--- a/Week 6/flexbox.html
+++ b/Week 6/flexbox.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex Box</title>
-    <link rel="stylesheet" href="flex.css">
+    <link rel="stylesheet" href="CSS/flex.css">
 </head>
 <body>
     <h1>Flex Box</h1>
