--- a/Week 6/position.html
+++ b/Week 6/position.html
@@ -9,11 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="box purple" Hello World></div>
-    <div class="box red" World></div>
-    <div class="box yellow" Yesmola></div>
-</div>
-   
-  
+    <div class="box purple">Hello World</div>
+    <div class="box red"> World</div>
+    <div class="box yellow">Yesmola</div>
+</div> 
 </body>
 </html>
